--- a/css/style.css
+++ b/css/style.css
@@ -449,10 +449,12 @@ html, body {
   font-family: 'myFirstFont';
   font-size: 55px;
   color: #FF6600;
+  margin-bottom: 63px;
 }
 .offers1_2 {
-  font-family: 'myFirstFont';
-  transform: translate(0vw,-50px);
+  font-family: 'myFirstFont';/*
+  transform: translate(0vw,-50px);*/
+  margin-top: -45px;
 }
 
 
@@ -460,10 +462,12 @@ html, body {
   font-family: 'myFirstFont';
   font-size: 55px;
   color: #66999A;
+  margin-bottom: 63px;
 }
 .offers2_2 {
-  font-family: 'myFirstFont';
-  transform: translate(0vw,-50px);
+  font-family: 'myFirstFont';/*
+  transform: translate(0vw,-50px);*/
+  margin-top: -45px;
 }
 
 
@@ -471,10 +475,14 @@ html, body {
   font-family: 'myFirstFont';
   font-size: 55px;
   color:#FF1C47;
+  margin-bottom: 63px;
+
 }
 .offers3_2 {
   font-family: 'myFirstFont';
-  transform: translate(0vw,-50px);
+  /*
+  transform: translate(0vw,-50px);*/
+  margin-top: -45px;
 }
 
 .offers0-1 {
@@ -609,7 +617,7 @@ html, body {
 
 .digitalmp {
   font-family: 'myFirstFont4';
-  font-size: 10px;
+  font-size: 15px;
   color: #FBF008;
   margin-top: -1vw;
   letter-spacing: 0.2vw;
@@ -632,13 +640,18 @@ html, body {
 }
 
 
-/*
-@media (min-width: 992px){
+
+@media (min-width: 576px){
   .digitalmimg {
     width: 100%;
   }
-}*/
+}
 
+@media (min-width: 306px){
+  .digitalmimg {
+    width: 100%;
+  }
+}
 
 /*
 @media (min-width: 576px){
@@ -727,6 +740,10 @@ html, body {
   color: #000000;
   font-size: 10px;
   padding-top:10px ;
+}
+
+.f-section {
+  margin-bottom: 40px;
 }
 
 .streaksmall {
