--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ html, body {
     outline: none;
 }
 
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+  color: #ff0101;
+}
+
   @media (min-width: 1200px){
     .nav-item {
       font-size: 0.7vw !important;
@@ -106,7 +110,7 @@ html, body {
 
   @media (min-width: 997px){
     .navbar {
-      padding: 0px 0px;
+      padding: 8px 0px;
     }
   }
 
@@ -635,6 +639,7 @@ html, body {
     font-family: 'myFirstFont4';
     color: #fff;/*
     width: 100%;*/
+    font-size: 1.4vw;
   }
 }
 
@@ -664,6 +669,7 @@ html, body {
   font-family: 'myFirstFont4';
   color: #fff;/*
   font-size: 1vw;*/
+  
 }
 
 .tnds {
